# ASSET

./: .gitignore  JULES-TODO.MD  README.md  band_split_validation_results.json  colab_combined.ipynb  colab_combined.py  moggtest.py  pyproject.toml  redemix.py  setup.cfg
MPD/: artifact_example_config.json  enhanced_wavgen.py  example-config.json  prime1.py  some_future_enhancement_for_stemprover.common-or-analysis.visualization.py  waveform-generator_prime2.py
chimeras/: .gtest.py.swp  .verbose_code.py.swp  colab_combined.ipynb  essential_code.py  full_code.py  gtest.py  signatures_only.py  verbose_code.py
docs/: LEEME-audiencia_tecnica.md  LEEME_para-lapublica.md  README-public.md  README-technical.md  training-doc.md
docs/chatlogs/: claude-artifact_reduction_model_snippet.txt
golden_dataset/: analysis.json
refactor-1/: stem_proc_test.py
refactor-1/src/analysis/: base.py
refactor-1/src/core/: types.py
refactor-1/src/enhancement/: controlnet.py
refactor-1/src/preparation/: base.py
refactor-1/src/separation/: base.py
refactor-1/src/tools/: chimeracat.py
src/stemproved/: __init__.py
src/stemproved/enhancement/: training.py
src/stemprover/common/: __init__.py  audio_utils.py  math_utils.py  spectral_utils.py  types.py
src/stemprover/core/: audio.py
src/stemprover/training/: dataset.py
src/tools/: chimeracat.py
stemproved/: colab_combined.ipynb  colab_combined.py  essential_code.py  full_code.py  module-examples.py  pyproject.toml  signatures_only.py  verbose_code.py
stemproved/src/core/: config.py  types.py
stemproved/src/enhancement/: base.py
stemprover/: BS-validator.py  README.md  __init__.py  battery_tests_20241209.py  demo_artifact_analysis.py  development_plan.md  minimal-B.S.py  phase1_implementation.md  test_battery.py  thoughts_on_loss.txt  train_model.py
stemprover/data_generation/: README  waveform-generator-config_prime3.py
stemprover/src/stemprover/: __init__.py  types.py  utils.py
stemprover/src/tools/: Untitled-1.py  chimeracat.py  colab-stub.txt  (+1 more)
stemprover/tools/: chimeracat_has_moved_to_its_own_repo
test_output/: segment_analysis.json
test_output/phase_analysis/: phase_analysis_clean_vocal_from_90.0s_slice_0.00-5.00.json  phase_analysis_clean_vocal_from_90.0s_slice_10.00-15.00.json  phase_analysis_clean_vocal_from_90.0s_slice_12.50-17.50.json  phase_analysis_clean_vocal_from_90.0s_slice_15.00-20.00.json  phase_analysis_clean_vocal_from_90.0s_slice_22.50-27.50.json
(+38 files in other folders)
