[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stemproved"
version = "0.1.0"
description = "Tools for improving stem separation results"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Scott VR", email = "scottvr@gmail.com"}
]
dependencies = [
    "numpy",
    "librosa",
    "tensorflow",
    "torch",
    "matplotlib",
    "networkx",
    "spleeter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["stemproved"]