[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stemprover"
version = "0.1.0"
description = "ASSET - Audio Separation Stemfile Enhancement Toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Scott VR", email = "scottvr@paperclipmaximizer.ai"}
]
dependencies = [
    "numpy",
    "librosa",
    "tensorflow",
    "torch",
    "matplotlib",
    "networkx",
    "spleeter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["stemprover"]