[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stemprover"
version = "0.1.1"
description = "ASSET - Audio Separation Stemfile Enhancement Toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Scott VR", email = "scottvr@paperclipmaximizer.ai"}
]
dependencies = [
    "numpy",
    "librosa==3.10.0",
    "tensorflow",
    "torch",
    "matplotlib",
    "networkx",
    "spleeter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.hatch.build]
packages = ["stemprover/src/stemprover"]
