[metadata]
name = stemproved
author = Scott VR
description = Tools for improving stem separation results
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scottvr/ASSET
project_urls =
    Bug Tracker = https://github.com/scottvr/ASSET/issues